class_3/resources/dapi-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: dapi-pod
  labels:
    app: dapi-pod
    env: prod
    awesome: absolute
spec:
  restartPolicy: Never
  containers:
    - name: dapi-pod
      image: busybox
      command: [ "sh", "-c"]
      args:
      - while true; do
          echo -en '\n';
          printenv MY_NODE_NAME MY_POD_NAME MY_POD_NAMESPACE;
          printenv MY_POD_IP MY_POD_SERVICE_ACCOUNT;
          sleep 10;
        done;
      resources:
        requests:
          memory: "32Mi"
          cpu: "100m"
        limits:
          memory: "64Mi"
          cpu: "200m"
