class_3/resources/secret-pod-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
  labels:
    app: secret-demo
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: secret-container
      image: nginx
