class_3/resources/secret-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
  labels:
    app: secret-demo
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: secret-container
      image: nginx
      volumeMounts:
          # name must match the volume name below
          - name: secret-volume
            mountPath: /etc/secret-volume
  # The secret data is exposed to Containers in the Pod through a Volume.
  volumes:
    - name: secret-volume
      secret:
        secretName: demo-secret
