class_3/resources/shared_state.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: shared-state
  name: shared-state
spec:
  terminationGracePeriodSeconds: 0
  containers:
  - name: fetcher
    image: busybox
    command: ["/bin/sleep", "999999"]
    workingDir: /shared
    volumeMounts:
    - name: shared-vol
      mountPath: /shared
  - name: server
    image: busybox
    command: ["/bin/sleep", "999999"]
    workingDir: /shared
    volumeMounts:
    - name: shared-vol
      mountPath: /shared
  volumes:
  - name: shared-vol
    emptyDir:
      medium: "Memory"
