class_3/resources/ing-path.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /httpd
        backend:
          serviceName: httpd
          servicePort: 80
